--- a/.github/workflows/modified.yaml
+++ b/.github/workflows/modified.yaml
@@ -53,7 +53,9 @@ jobs:
             pytorch=${{ matrix.pytorch-version }}
       
       # CINTENT >> INSERT_CINTENT
-      - uses: JavidDitty/setup-cintent@e3d420b9a40765f278d3651507e812014bfc7407
+      - uses: JavidDitty/setup-cintent@3638849e94bdb037f0a405375686a8550e6df904
+        with:
+          nonblocking: true
 
       - name: Install library
         run: python -m pip install --no-deps .
